<resources>
    <string name="app_name">FIL_ROUGE_V02</string>
    <string name="title_activity_presentation">Presentation</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="votre_pr_nom">Votre prénom :</string>
    <string name="pr_sentez_vous">Présentez vous !</string>
    <string name="vous_tes">Vous êtes ?</string>
    <string name="un_homme">Un homme</string>
    <string name="une_femme">Une Femme</string>
    <string name="votre_age">Votre Age ?</string>
    <string name="votre_pr_nome">Votre prénom ?</string>
    <string name="commencer_les_questions">Commencer les questions !</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_maecenas_mauris_velit_egestas_sed_dui_eu_suscipit_laoreet_ligula_quisque_feugiat_eros_condimentum_ipsum_varius_ac_tristique_leo_fringill">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas mauris velit, egestas sed dui eu, suscipit laoreet ligula. Quisque feugiat eros condimentum ipsum varius, ac tristique leo fringill</string>
    <string name="demarrer">DEMARRER</string>
    <string name="bienvenue">BIENVENUE !</string>
    <string name="title_activity_end_activity">End_activity</string>
    <string name="question">Question?</string>
    <string name="answer1">Answer1</string>
    <string name="answer2">Answer2</string>
    <string name="answer3">Answer3</string>
    <string name="answer4">Answer4</string>
    <string name="textview">TextView</string>
    <string name="quel_est_le_d_gr_de_d_sagr_ment_douleur_ressenti">Quel est le dégré de désagrément / douleur ressenti</string>
    <string name="quel_est_votre_pr_nom">Quel est votre prénom ?</string>
    <string name="quel_est_votre_age">Quel est votre age ?</string>
    <string name="quitter">QUITTER</string>
    <string name="envoyer">ENVOYER</string>
</resources>